src/test/ui/generic-associated-types/issue-86787.stderr
error: `impl` associated type signature for `TRef` doesn't match `trait` associated type signature
  --> $DIR/issue-86787.rs:23:5
   |
LL |       type TRef<'a>;
   |       -------------- expected
...
LL | /     type TRef<'a>
LL | |
LL | |
LL | |     where
LL | |     <Left as HasChildrenOf>::T: 'a,
LL | |     <Right as HasChildrenOf>::T: 'a
LL | |     = Either<&'a Left::T, &'a Right::T>;
   | |________________________________________^ found

error: `impl` associated type signature for `TRef` doesn't match `trait` associated type signature
  --> $DIR/issue-86787.rs:23:5
   |
LL |       type TRef<'a>;
   |       -------------- expected
...
LL | /     type TRef<'a>
LL | |
LL | |
LL | |     where
LL | |     <Left as HasChildrenOf>::T: 'a,
LL | |     <Right as HasChildrenOf>::T: 'a
LL | |     = Either<&'a Left::T, &'a Right::T>;
   | |________________________________________^ found

error: aborting due to 2 previous errors

